# pinedio-lora-driver

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/communicator/: CMakeLists.txt
apps/communicator/include/PineDio/LoRa/: Communicator.h
apps/communicator/src/: Communicator.cpp
apps/gpio/: CMakeLists.txt  main.cpp
apps/pinephone-communicator/: CMakeLists.txt  main.cpp
apps/pinephone-service/: CMakeLists.txt
apps/pinephone-service/src/: main.cpp
apps/usb-communicator/: CMakeLists.txt  main.cpp
include/PineDio/LoRa/: Exceptions.h  PinedioLoraRadio.h  PinephoneBackplate.h  UsbAdapter.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  PinedioLoraRadio.cpp
src/pinephone/: CMakeLists.txt  PinephoneBackplate.cpp
src/usb-adapter/: CMakeLists.txt  UsbAdapter.cpp
